@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ListCatalogoServicoUI <<presentation>>
class ListCatalogoServicoController <<application>>
class PersistenceContext <<persistence>>
class RepositoryFactory <<factory>>
class CatalogoRepository <<repository>>
class ServicoRepository <<repository>>


ListCatalogoServicoUI --> ListCatalogoServicoController
ListCatalogoServicoController : listCatalogo()
ListCatalogoServicoController : listServico()

ListCatalogoServicoController : findCatalogo(dados)
ListCatalogoServicoController : findServicosUtilizador(dadosServico)
ListCatalogoServicoController : findCatalogoServico(dadosCatalogo,dadosServico)

ListCatalogoServicoController --> CatalogoRepository
ListCatalogoServicoController --> ServicoRepository
ListCatalogoServicoController --> PersistenceContext
PersistenceContext : repositories()
ListCatalogoServicoController --> RepositoryFactory
RepositoryFactory : catalogos()
RepositoryFactory : servicos()

PersistenceContext --> RepositoryFactory
RepositoryFactory --> CatalogoRepository
RepositoryFactory --> ServicoRepository

CatalogoRepository : findCatalogo(dados)
CatalogoRepository : findServicosUtilizador(dadosServico)
CatalogoRepository : findCatalogo(dadosCatalogo,dadosServico)

ServicoRepository : findAllServicos(listaCatalogos, dadosServico)
ServicoRepository : findServicos(catalogo, dadosServico)

@enduml
